--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <div class="herois my-5">
       <div class="row justify-content-center">
         <div class="col-6 col-md-4 col-lg-2 text-center mb-3">
-          <img src="../imagens/MARVEL.jpg" alt="Marvel" class="img-thumbnail">
+          <img src="./imagens/MARVEL.jpg" alt="Marvel" class="img-thumbnail">
         </div>
         <div class="col-6 col-md-4 col-lg-2 text-center mb-3">
           <img src="../imagens/bros.png" alt="Warner" class="img-thumbnail">
