--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
   <div class="container mt-5 pt-4">
     <header class="text-center my-4">
-      <img src="../imagens/fotomichas.jpg" alt="Foto do Michas" class="michas-img">
+      <img src="./imagens/fotomichas.jpg" alt="Foto do Michas" class="michas-img">
       <h1 class="titulo-michas mt-3">Michael Xavier Antunes</h1>
       <h2 class="subtitulo-michas">Estudante</h2>
     </header>
