--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           <img src="./imagens/MARVEL.jpg" alt="Marvel" class="img-thumbnail">
         </div>
         <div class="col-6 col-md-4 col-lg-2 text-center mb-3">
-          <img src="../imagens/bros.png" alt="Warner" class="img-thumbnail">
+          <img src="./imagens/bros.png" alt="Warner" class="img-thumbnail">
         </div>
         <div class="col-6 col-md-4 col-lg-2 text-center mb-3">
           <img src="./imagens/logo.jpg" alt="DC Comics" class="img-thumbnail">
