--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Michas</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="css/index.css">
-  <link rel="shortcut icon" href="../imagens/icone.png" type="image/png">
+  <link rel="shortcut icon" href="./imagens/icone.png" type="image/png">
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
