--- a/html/projetos.html
+++ b/html/projetos.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sobre mim - Michas</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="../css/index.css">
+    <link rel="stylesheet" href="css/index.css">
     <link rel="shortcut icon" href="../imagens/icone.png" type="image/png" style="width: 14px; height: 14px;">
 </head>
 <body>
