--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="menu d-flex justify-content-around">
           <a href="sobremim.html" class="btn btn-outline-primary">Sobre mim</a>
           <a href="projetos.html" class="btn btn-outline-primary">Projetos</a>
-          <a href="contato.html" class="btn btn-outline-primary">Contato</a>
+          <a href="html/contato.html" class="btn btn-outline-primary">Contato</a>
         </div>
       </div>
     </div>
