--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <div class="col-md-8">
         <div class="menu d-flex justify-content-around">
           <a href="sobremim.html" class="btn btn-outline-primary">Sobre mim</a>
-          <a href="projetos.html" class="btn btn-outline-primary">Projetos</a>
+          <a href="html/projetos.htmll" class="btn btn-outline-primary">Projetos</a>
           <a href="html/contato.html" class="btn btn-outline-primary">Contato</a>
         </div>
       </div>
