--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div class="row justify-content-center mb-4">
       <div class="col-md-8">
         <div class="menu d-flex justify-content-around">
-          <a href="sobremim.html" class="btn btn-outline-primary">Sobre mim</a>
+          <a href="html/sobremim.html" class="btn btn-outline-primary">Sobre mim</a>
           <a href="html/projetos.htmll" class="btn btn-outline-primary">Projetos</a>
           <a href="html/contato.html" class="btn btn-outline-primary">Contato</a>
         </div>
