--- a/html/contato.html
+++ b/html/contato.html
@@ -18,7 +18,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="index.html#mim">Sobre mim</a></li>
+                    <li class="nav-item"><a class="nav-link" href="index.html">Sobre mim</a></li>
                     <li class="nav-item"><a class="nav-link" href="../index.html#formacao">Formação</a></li>
                     <li class="nav-item"><a class="nav-link" href="../index.html#contato">Contato</a></li>
                 </ul>
