--- a/html/sobremim.html
+++ b/html/sobremim.html
@@ -32,7 +32,7 @@
                 <img src="../imagens/breve.jpg" alt="Em breve" class="img-fluid mb-4" style="max-height: 300px;">
                 <h1 class="text-light-blue">Em breve novidades</h1>
                 <p class="lead">Esta página está em construção. Volte em breve para conferir as atualizações!</p>
-                <a href="index.html" class="btn btn-outline-primary mt-3">Voltar para a página inicial</a>
+                <a href="../index.html" class="btn btn-outline-primary mt-3">Voltar para a página inicial</a>
             </div>
         </div>
     </div>
